# FastAPIProject

./: .gitignore  main.py  pyproject.toml
auth/: README.md  utils.py
